--- a/README.adoc
+++ b/README.adoc
@@ -1,45 +1,28 @@
-= Postman/cURL 用途簡易說明
+= Spring MVC 樂透登入功能
 
-==== 兩者都用來發送 HTTP 請求和調試 API。
+1. 初始網頁是登入畫面： http://localhost:8080/lotterygame/login
+2. 需先註冊帳號，若註冊帳號重複會提示，註冊成功後可登入。
+3. 登入部分不是使用filter，filter的還沒有做出來。
+
+= Postman/cURL用途簡易說明
+
+==== 兩者都用來發送HTTP請求和調試API。
 
 1. **Postman**
    * 是一個圖形化的 API 開發工具，專為測試和調試 API 而設計
    * 提供了直觀的介面，讓開發者可以輕鬆構建和發送HTTP請求，查看結果並保存測試用例
    * 支持REST、SOAP、GraphQL等多種協議和格式
-   * 使用Postman發送GET和POST請求：
-
-  使用 Postman 時，用戶可以通過圖形界面選擇請求方法（如GET或POST），輸入URL，並配置請求參數。Postman會顯示響應的JSON結果、HTTP狀態碼等，幫助開發者調試和驗證API。
      
 2. **cURL**
    * 是一個基於命令行的工具，允許用戶向URL發送各種請求（如 GET、POST、PUT、DELETE等）
    * 可以用來模擬瀏覽器或應用程序發送的 HTTP 請求，並查看響應的結果
    * 被廣泛應用於自動化腳本、測試 API、下載文件等
-   * 使用cURL發送GET和POST請求：
-
-   .GET請求：
-   [source]
-   ----
-   curl https://api.example.com/resource
-   ----
-   這會向 https://api.example.com/resource 發送一個GET請求，並在命令行上顯示響應。
-
-   .POST請求：
-   [source]
-   ----
-   curl -X POST https://api.example.com/resource -d "param1=value1&param2=value2"
-   ----
-   這會向 https://api.example.com/resource 發送一個POST請求，並附帶請求參數param1=value1和param2=value2。
-
-   .其他常用選項：
-   * `-H`：添加自定義請求標頭
-   * `-v`：顯示詳細的請求和響應過程，適合調試使用
-   * `-o`：將響應內容輸出到文件中。
 
 3. **cURL和Postman的關係**
    * 使用場景：cURL通常用於命令行環境和腳本中，特別適合自動化和簡單的API測試。而Postman提供了更友好的圖形介面，適合手動測試、設置複雜的請求和管理API測試流程
    * 可互相轉換：Postman 支持將發送的請求轉換為cURL命令，用戶可以在Postman構建請求後，將其導出為cURL命令。
 
-==== cURL 和 Postman 的比較
+==== Postman和cURL的比較
 
 [cols="20,40,40", options="header"]
 |===
